--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "djangorestframework>=3.16.0",
+    "djangorestframework-simplejwt>=5.5.0",
+    "pillow>=11.2.1",
 ]
