chore: updated project dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "djangorestframework>=3.16.0",
     "djangorestframework-simplejwt>=5.5.0",
+    "dotenv>=0.9.9",
     "pillow>=11.2.1",
 ]
