--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "A Blog API using Django REST Framework"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "django-cors-headers>=4.7.0",
     "djangorestframework>=3.16.0",
     "djangorestframework-simplejwt>=5.5.0",
     "dotenv>=0.9.9",
